--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,7 +86,8 @@ main{
 }
 .section-title{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+   text-align: center;
 
 }
 
@@ -108,4 +109,32 @@ main{
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+/* what-i-do styles*/
+section{
+    margin-top: 130px;
+    
+
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+   
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-discription{
+    color: #757575;
 }
